# libwtcdb

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  dtfabric.yaml  libwtcdb-wiki.ini  libwtcdb.ini  libwtcdb.pc.in  libwtcdb.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh
.github/workflows/: build_linux.yml  build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h
documentation/: Windows Explorer Thumbnail Cache database format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libwtcdb.h.in
include/libwtcdb/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libwtcdb/: Makefile.am  libwtcdb.c  libwtcdb.rc.in  libwtcdb_array_type.c  libwtcdb_array_type.h  libwtcdb_cache_entry.c  libwtcdb_cache_entry.h  libwtcdb_crc.c  libwtcdb_crc.h  libwtcdb_debug.c  libwtcdb_debug.h  libwtcdb_definitions.h.in  libwtcdb_error.c  libwtcdb_error.h  libwtcdb_extern.h  libwtcdb_file.c  libwtcdb_file.h  libwtcdb_file_header.c  libwtcdb_file_header.h  libwtcdb_index_entry.c  libwtcdb_index_entry.h  libwtcdb_io_handle.c  libwtcdb_io_handle.h  libwtcdb_item.c  libwtcdb_item.h  libwtcdb_item_value.c  libwtcdb_item_value.h  libwtcdb_libbfio.h  libwtcdb_libcdata.h  libwtcdb_libcerror.h  libwtcdb_libclocale.h  libwtcdb_libcnotify.h  libwtcdb_libcstring.h  libwtcdb_libfdatetime.h  libwtcdb_libfvalue.h  libwtcdb_libuna.h  libwtcdb_notify.c  libwtcdb_notify.h  libwtcdb_support.c  libwtcdb_support.h  (+7 more)
m4/: yaltools.m4
macosx/: Introduction.rtf.in  Makefile.am  Readme.rtf
macosx/libwtcdb.pmdoc/: 01bin.xml  01bin.xml.in  02include.xml  02include.xml.in  03lib.xml  03lib.xml.in  04share.xml  04share.xml.in  index.xml  index.xml.in
manuals/: Makefile.am  libwtcdb.3  wtcdbexport.1  wtcdbinfo.1
msvscpp/: Makefile.am  libnk2.sln  libwtcdb.sln
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfmapi/: libfmapi.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libnk2_dll/: libnk2_dll.vcproj
msvscpp/libwtcdb/: libwtcdb.vcproj
msvscpp/libwtcdb_dll/: libwtcdb_dll.vcproj
msvscpp/nk2export/: nk2export.vcproj
msvscpp/nk2info/: nk2info.vcproj
msvscpp/wtcdb_test_cache_entry/: wtcdb_test_cache_entry.vcproj
msvscpp/wtcdb_test_crc/: wtcdb_test_crc.vcproj
msvscpp/wtcdb_test_error/: wtcdb_test_error.vcproj
msvscpp/wtcdb_test_file/: wtcdb_test_file.vcproj
msvscpp/wtcdb_test_file_header/: wtcdb_test_file_header.vcproj
msvscpp/wtcdb_test_get_version/: wtcdb_test_get_version.vcproj
msvscpp/wtcdb_test_index_entry/: wtcdb_test_index_entry.vcproj
msvscpp/wtcdb_test_io_handle/: wtcdb_test_io_handle.vcproj
msvscpp/wtcdb_test_item/: wtcdb_test_item.vcproj
msvscpp/wtcdb_test_item_value/: wtcdb_test_item_value.vcproj
msvscpp/wtcdb_test_notify/: wtcdb_test_notify.vcproj
msvscpp/wtcdb_test_open_close/: wtcdb_test_open_close.vcproj
msvscpp/wtcdb_test_support/: wtcdb_test_support.vcproj
msvscpp/wtcdb_test_tools_info_handle/: wtcdb_test_tools_info_handle.vcproj
msvscpp/wtcdb_test_tools_output/: wtcdb_test_tools_output.vcproj
msvscpp/wtcdb_test_tools_signal/: wtcdb_test_tools_signal.vcproj
msvscpp/wtcdbexport/: wtcdbexport.vcproj
msvscpp/wtcdbinfo/: wtcdbinfo.vcproj
ossfuzz/: Makefile.am  file_fuzzer.cc  ossfuzz_libwtcdb.h
po/: ChangeLog
tests/: Makefile.am  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_functions.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_tools.at  test_tools.ps1  test_wtcdbexport.sh  test_wtcdbinfo.ps1  test_wtcdbinfo.sh  wtcdb_test_cache_entry.c  wtcdb_test_crc.c  wtcdb_test_error.c  wtcdb_test_file.c  wtcdb_test_file_header.c  wtcdb_test_functions.c  wtcdb_test_functions.h  wtcdb_test_get_version.c  wtcdb_test_getopt.c  wtcdb_test_getopt.h  wtcdb_test_index_entry.c  wtcdb_test_io_handle.c  wtcdb_test_item.c  wtcdb_test_item_value.c  wtcdb_test_libbfio.h  wtcdb_test_libcerror.h  wtcdb_test_libclocale.h  wtcdb_test_libcnotify.h  wtcdb_test_libcstring.h  wtcdb_test_libcsystem.h  wtcdb_test_libuna.h  wtcdb_test_libwtcdb.h  wtcdb_test_macros.h  wtcdb_test_memory.c  wtcdb_test_memory.h  wtcdb_test_notify.c  (+6 more)
tests/data/: cache_entry.1  cache_entry.2  file_header.1  file_header.2  index_entry.1  index_entry.2
wtcdbtools/: Makefile.am  export_handle.c  export_handle.h  info_handle.c  info_handle.h  log_handle.c  log_handle.h  wtcdbexport.c  wtcdbinfo.c  wtcdbinput.c  wtcdbinput.h  wtcdboutput.c  wtcdboutput.h  wtcdbtools_getopt.c  wtcdbtools_getopt.h  wtcdbtools_i18n.h  wtcdbtools_libbfio.h  wtcdbtools_libcerror.h  wtcdbtools_libcfile.h  wtcdbtools_libclocale.h  wtcdbtools_libcnotify.h  wtcdbtools_libcpath.h  wtcdbtools_libcstring.h  wtcdbtools_libcsystem.h  wtcdbtools_libfdatetime.h  wtcdbtools_libfvalue.h  wtcdbtools_libuna.h  wtcdbtools_libwtcdb.h  wtcdbtools_output.c  wtcdbtools_output.h  wtcdbtools_signal.c  wtcdbtools_signal.h  wtcdbtools_unused.h
