EXTRA_DIST = \
	libwtcdb.pmdoc/01bin.xml.in \
	libwtcdb.pmdoc/01bin-contents.xml \
	libwtcdb.pmdoc/02include.xml.in \
	libwtcdb.pmdoc/02include-contents.xml \
	libwtcdb.pmdoc/03lib.xml.in \
	libwtcdb.pmdoc/03lib-contents.xml \
	libwtcdb.pmdoc/04share.xml.in \
	libwtcdb.pmdoc/04share-contents.xml \
	libwtcdb.pmdoc/index.xml \
	libwtcdb.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libwtcdb.pmdoc/01bin.xml
	/bin/rm -f libwtcdb.pmdoc/02include.xml
	/bin/rm -f libwtcdb.pmdoc/03lib.xml
	/bin/rm -f libwtcdb.pmdoc/04share.xml
	/bin/rm -f libwtcdb.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

