MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libwtcdb/libwtcdb.vcproj \
	wtcdb_test_error/wtcdb_test_error.vcproj \
	wtcdb_test_file/wtcdb_test_file.vcproj \
	wtcdb_test_item/wtcdb_test_item.vcproj \
	wtcdb_test_open_close/wtcdb_test_open_close.vcproj \
	wtcdb_test_support/wtcdb_test_support.vcproj \
	wtcdbexport/wtcdbexport.vcproj \
	wtcdbinfo/wtcdbinfo.vcproj \
	libwtcdb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

