MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libuna/libuna.vcproj \
	libwtcdb/libwtcdb.vcproj \
	wtcdb_test_cache_entry/wtcdb_test_cache_entry.vcproj \
	wtcdb_test_crc/wtcdb_test_crc.vcproj \
	wtcdb_test_error/wtcdb_test_error.vcproj \
	wtcdb_test_file/wtcdb_test_file.vcproj \
	wtcdb_test_file_header/wtcdb_test_file_header.vcproj \
	wtcdb_test_index_entry/wtcdb_test_index_entry.vcproj \
	wtcdb_test_io_handle/wtcdb_test_io_handle.vcproj \
	wtcdb_test_item/wtcdb_test_item.vcproj \
	wtcdb_test_notify/wtcdb_test_notify.vcproj \
	wtcdb_test_support/wtcdb_test_support.vcproj \
	wtcdbexport/wtcdbexport.vcproj \
	wtcdbinfo/wtcdbinfo.vcproj \
	libwtcdb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

